--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="card-header" id="headingIPC">
               <h4 class="mb-0">
                 <button class="btn btn-link converter-toggle collapsed" data-toggle="collapse" data-target="#collapseIPC" aria-expanded="false" aria-controls="collapseIPC">
-                  IPC to BNS Converter
+                  IPC को BNS में बदलें
                 </button>
               </h4>
             </div>
@@ -83,7 +83,7 @@
             <div class="card-header" id="headingCrPC">
               <h4 class="mb-0">
                 <button class="btn btn-link converter-toggle collapsed" data-toggle="collapse" data-target="#collapseCrPC" aria-expanded="false" aria-controls="collapseCrPC">
-                  CrPC to BNSS Converter
+                  CrPC को BNSS में बदलें
                 </button>
               </h4>
             </div>
