--- a/index.html
+++ b/index.html
@@ -149,7 +149,11 @@
 
     <!-- Updates Section (formerly Offers) -->
     <div id="updatesSection" style="display:none;">
-      <iframe src="news.html"></iframe>
+      <!-- Embedded Twitter timeline for @problemofpolice -->
+      <a class="twitter-timeline" data-height="600" data-theme="light" href="https://twitter.com/problemofpolice">
+        Latest News @problemofpolice
+      </a>
+      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
     <!-- Category Section (Folders & Search Results) -->
     <div id="categorySection" style="display:none;">
