--- a/index.html
+++ b/index.html
@@ -149,11 +149,24 @@
 
     <!-- Updates Section (formerly Offers) -->
     <div id="updatesSection" style="display:none;">
+      <!-- Modern Custom Progress Bar shown while Twitter timeline loads -->
+      <div id="twitterProgress" class="modern-progress">
+        <div class="modern-progress-bar"></div>
+      </div>
       <!-- Embedded Twitter timeline for @problemofpolice -->
       <a class="twitter-timeline" data-height="600" data-theme="light" href="https://twitter.com/problemofpolice">
-        Latest News @problemofpolice
+        Tweets by @problemofpolice
       </a>
       <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <!-- Custom script to hide progress bar when timeline is rendered -->
+      <script>
+        window.twttr = window.twttr || {};
+        twttr.ready(function (twttr) {
+          twttr.events.bind('rendered', function (event) {
+            document.getElementById('twitterProgress').style.display = 'none';
+          });
+        });
+      </script>
     </div>
     <!-- Category Section (Folders & Search Results) -->
     <div id="categorySection" style="display:none;">
