--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       </div>
       <!-- Embedded Twitter timeline for @problemofpolice -->
       <a class="twitter-timeline" data-height="600" data-theme="light" href="https://twitter.com/problemofpolice">
-        Tweets by @problemofpolice
+        Please Wait, News is Loading...
       </a>
       <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
       <!-- Custom script to hide progress bar when timeline is rendered -->
