--- a/index.html
+++ b/index.html
@@ -146,7 +146,11 @@
         </div><!-- End of accordion -->
       </div>
     </div>
-
+    <div class="running-sentence">
+        <marquee behavior="scroll" direction="left" scrollamount="4">
+          यह वेबसाईट आपके लिए और आपके सहयोग से है । कोई प्रारुप अपडेट कराने के लिए सम्पर्क करें ताकि अन्य साथियों को सुविधा हो । 
+        </marquee>
+      </div>
     <!-- Updates Section (formerly Offers) -->
     <div id="updatesSection" style="display:none;">
       <!-- Modern Custom Progress Bar shown while Twitter timeline loads -->
