--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     </div>
     <div class="running-sentence">
         <marquee behavior="scroll" direction="left" scrollamount="4">
-          यह वेबसाईट आपके लिए और आपके सहयोग से है । कोई प्रारुप अपडेट कराने के लिए सम्पर्क करें ताकि अन्य साथियों को सुविधा हो । 
+          यह प्लेटफार्म आपके लिए और आपके सहयोग से है । कोई प्रारुप अपडेट कराने के लिए सम्पर्क करें ताकि अन्य साथियों को सुविधा हो । 
         </marquee>
       </div>
     <!-- Updates Section (formerly Offers) -->
