--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -5,6 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Privacy Policy - PoliceFiles.online</title>
   <style>
+    .back-button {
+  display: inline-block;
+  margin: 20px 0;
+  padding: 10px 20px;
+  background-color: #007bff; /* Blue background */
+  color: #ffffff;
+  text-decoration: none;
+  border-radius: 4px;
+  font-weight: 600;
+  transition: background-color 0.3s ease;
+}
+.back-button:hover {
+  background-color: #0056b3;
+}
     body {
       font-family: Arial, sans-serif;
       margin: 2em;
@@ -23,6 +37,8 @@
   </style>
 </head>
 <body>
+   <!-- Back to Home Button at the Top -->
+  <a href="index.html" class="back-button">Back to Home</a>
   <h1>Privacy Policy</h1>
   <p><strong>Effective Date:</strong> 12.03.2025</p>
 
