--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,20 @@
   <title>Contact Us - Police Files</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
+    .back-button {
+  display: inline-block;
+  margin: 20px 0;
+  padding: 10px 20px;
+  background-color: #007bff; /* Blue background */
+  color: #ffffff;
+  text-decoration: none;
+  border-radius: 4px;
+  font-weight: 600;
+  transition: background-color 0.3s ease;
+}
+.back-button:hover {
+  background-color: #0056b3;
+}
     * {
       box-sizing: border-box;
     }
@@ -66,6 +80,8 @@
   </style>
 </head>
 <body>
+   <!-- Back to Home Button at the Top -->
+  <a href="index.html" class="back-button">Back to Home</a>
   <div class="container">
     <h1>Contact Us</h1>
     <form id="contact-form" action="https://formsubmit.co/shishu.tricksbricks@gmail.com" method="POST">
