--- a/about.html
+++ b/about.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Police Files</title>
     <style>
+        .back-button {
+  display: inline-block;
+  margin: 20px 0;
+  padding: 10px 20px;
+  background-color: #007bff; /* Blue background */
+  color: #ffffff;
+  text-decoration: none;
+  border-radius: 4px;
+  font-weight: 600;
+  transition: background-color 0.3s ease;
+}
+.back-button:hover {
+  background-color: #0056b3;
+}
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -41,6 +55,8 @@
     </style>
 </head>
 <body>
+     <!-- Back to Home Button at the Top -->
+  <a href="index.html" class="back-button">Back to Home</a>
     <div class="container">
         <h1>About Police Files</h1>
         <p>Welcome to <strong>Police Files</strong>—your go-to platform for legal document templates, case management tools, and essential legal utilities. Our mission is to simplify legal documentation for professionals, law enforcement officers, and individuals.</p>
