--- a/index.html
+++ b/index.html
@@ -263,10 +263,10 @@
     </button>
   </nav>
 
-  <!-- Floating WhatsApp Button -->
-  <a href="https://wa.me/919504875076?text=Came%20here%20From%20Police%20Files" target="_blank" class="whatsapp-float">
-    Any Issue?
-  </a>
+<!-- Floating Telegram Support Button -->
+<a href="https://t.me/PoliceCK" target="_blank" class="telegram-float">
+  हमसे सम्पर्क करें
+</a>
 
   <!-- Modal for Document Preview -->
   <div class="modal fade" id="filePreviewModal" tabindex="-1" role="dialog" 
