--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     </div>
     <div class="running-sentence">
         <marquee behavior="scroll" direction="left" scrollamount="4">
-          यह वेबसाईट आपके लिए और आपके सहयोग से है । कोई प्रारुप अपडेट कराने के लिए नीचे दिये गये बटन से सम्पर्क करें ताकि अन्य साथियों को सुविधा हो । 
+          आपके सहयोग की आवश्यकता है, कोई प्रारुप अपडेट कराने के लिए नीचे दिये गये बटन से सम्पर्क करें ताकि सभी जरुरी प्नारुप अपडेट किया जा सके । 
         </marquee>
       </div>
     <!-- Updates Section (formerly Offers) -->
