--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
                   <button class="btn material-btn" onclick="convertIPCtoBNS()">Convert</button>
                   <div class="result mt-2"><strong>Result:</strong> <span id="ipcResult"></span></div>
                   <p class="small mt-1">
-                    (Based on data from: 
+                    (Data fetched from Web: 
                     <a href="https://bprd.nic.in/uploads/pdf/COMPARISON%20SUMMARY%20BNS%20to%20IPC%20.pdf" target="_blank">
-                      BNS to IPC PDF
+                      Detailed PDF Here
                     </a>)
                   </p>
                 </div>
@@ -109,9 +109,9 @@
                   <button class="btn material-btn" onclick="convertCrPcToBNSS()">Convert</button>
                   <div class="result mt-2"><strong>Result:</strong> <span id="crpcResult"></span></div>
                   <p class="small mt-1">
-                    (Based on data from: 
+                    (Data fetched from Web: 
                     <a href="https://bprd.nic.in/uploads/pdf/Comparison%20summary%20BNSS%20to%20CrPC.pdf" target="_blank">
-                      BNSS to CrPC PDF
+                      Detailed PDF Here
                     </a>)
                   </p>
                 </div>
@@ -161,7 +161,7 @@
     </div>
     <div class="running-sentence">
         <marquee behavior="scroll" direction="left" scrollamount="4">
-          आपके सहयोग की आवश्यकता है, कोई प्रारुप अपडेट कराने के लिए नीचे दिये गये बटन से सम्पर्क करें ताकि सभी जरुरी प्नारुप अपडेट किया जा सके । 
+          आपके सहयोग की आवश्यकता है, कोई प्रारुप अपडेट कराने के लिए नीचे दिये गये बटन से सम्पर्क करें ताकि सभी जरुरी प्रारुप अपडेट किया जा सके । 
         </marquee>
       </div>
     <!-- Updates Section (formerly Offers) -->
