--- a/index.html
+++ b/index.html
@@ -22,13 +22,15 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Premium Header with Title, Search Bar, and Dark Mode Toggle -->
+  <!-- Header: Only the Menu Button (hamburger) is shown in the header -->
   <header class="site-header">
-    <div class="container">
-      <!-- Hamburger menu button (three-line icon) -->
-      <button id="menu-toggle" aria-label="Open menu">
-        <i class="fas fa-bars"></i>
-      </button>
+    <div class="container header-container">
+      <div class="header-icons">
+        <!-- Hamburger Menu Button -->
+        <button id="menu-toggle" aria-label="Open menu">
+          <i class="fas fa-bars"></i>
+        </button>
+      </div>
       <div class="header-content">
         <h1 class="site-title">Police Files</h1>
         <!-- Modern Material Search Bar -->
@@ -45,13 +47,15 @@
       </div>
     </div>
   </header>
-  <!-- Offcanvas menu that slides in from right -->
+  <!-- Offcanvas Menu (slides in when menu button is clicked) -->
   <nav id="offcanvas-menu">
-    <!-- Dark Mode Toggle moved here -->
-    <div class="menu-header" style="padding: 10px; text-align: center;">
-      <button id="darkModeToggle" class="dark-mode-btn" aria-label="Toggle dark mode">
-        <i class="fas fa-moon"></i>
-      </button>
+    <div class="menu-header">
+      <span class="menu-title"></span>
+      <!-- Dark Mode Toggle inside the offcanvas menu header -->
+      <label class="switch menu-toggle-switch">
+        <input type="checkbox" id="darkModeToggle">
+        <span class="slider round"></span>
+      </label>
     </div>
     <!-- Menu links -->
     <a href="about.html">About Us</a>
@@ -294,5 +298,14 @@
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <!-- Custom JS -->
   <script src="script.js"></script>
+  <script>
+    document.getElementById('darkModeToggle').addEventListener('change', function() {
+      if (this.checked) {
+        document.body.classList.add('dark-mode');
+      } else {
+        document.body.classList.remove('dark-mode');
+      }
+    });
+  </script>
 </body>
 </html>
