--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
   <!-- Keep the site mobile-friendly -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Police Files</title>
+
+  <!-- Google Analytics: Replace G-C4HYJ14HYY with your tracking ID -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-C4HYJ14HYY"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-C4HYJ14HYY');
+  </script>
   
   <!-- Google Fonts for a modern look -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
