--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -40,211 +40,139 @@
    <!-- Back to Home Button at the Top -->
   <a href="index.html" class="back-button">Back to Home</a>
   <h1>Privacy Policy</h1>
-  <p><strong>Effective Date:</strong> 12.03.2025</p>
+  <p><strong>Effective Date:</strong> 17.03.2025</p>
 
   <h2>1. Introduction</h2>
   <p>
-    Welcome to <strong>PoliceFiles.online</strong> (“<strong>we</strong>,” 
-    “<strong>our</strong>,” or “<strong>us</strong>”). We value your 
-    privacy and are committed to protecting your personal data. This 
-    Privacy Policy explains how we collect, use, disclose, and safeguard 
-    your information when you:
+    Welcome to <strong>Police Files</strong> (the “<strong>Website</strong>” or “<strong>Service</strong>”), 
+    accessible at <a href="https://policefiles.online">https://policefiles.online</a>. 
+    This Privacy Policy describes how we collect, use, and share your personal information when you visit or use our Website.
   </p>
-  <ul>
-    <li>Visit and use our website 
-      <a href="https://policefiles.online" target="_blank">https://policefiles.online</a> 
-      (the “Website”),</li>
-    <li>Use our mobile application (the “App”), which is a based on our Website ,</li>
-    <li>Interact with any tools, features, or services provided on our 
-      Website/App.</li>
-  </ul>
   <p>
-    By accessing or using the Website/App, you agree to the collection and 
-    use of information in accordance with this Privacy Policy.
+    <strong>Disclaimer:</strong> Police Files is <strong>not</strong> affiliated with, endorsed by, or connected 
+    to any government agency or police department. We operate independently to provide legal tools and templates 
+    for informational purposes only.
   </p>
 
   <h2>2. Information We Collect</h2>
-  <h3>2.1. Personal Information You Provide</h3>
+  <p>We may collect the following types of information:</p>
   <ul>
     <li>
-      <strong>Contact via WhatsApp:</strong> If you choose to contact us 
-      using the WhatsApp button, you may voluntarily provide personal 
-      information such as your name, phone number, or any other details 
-      you include in your message. We use this information solely to 
-      respond to your inquiries.
+      <strong>Personal Information You Voluntarily Provide:</strong> 
+      If you contact us (e.g., via email or a contact form), we may collect your name, email address, or any other details you choose to share.
     </li>
     <li>
-      <strong>Feedback or Support Requests:</strong> If you submit feedback 
-      or support requests through any available contact methods, we will 
-      collect the information you provide (e.g., name, email address, and 
-      any additional details you choose to share).
+      <strong>Usage Data & Analytics:</strong> We automatically collect certain information about your device 
+      and how you interact with our Website. This can include your IP address, browser type, pages visited, and 
+      the time and date of your visit.
     </li>
   </ul>
 
-  <h3>2.2. Usage Data</h3>
+  <h2>3. Google Analytics</h2>
+  <p>
+    We use <strong>Google Analytics</strong> to help us understand how users engage with our Website. Google Analytics uses 
+    cookies or other tracking technologies to collect and store information such as how often users visit our site, 
+    what pages they visit, and which other sites they used prior to coming to our site.
+  </p>
+  <p>
+    This information is used to improve our services and enhance user experience. For more details on how Google 
+    collects and processes data, visit: 
+    <a href="https://policies.google.com/technologies/partner-sites" target="_blank" rel="noopener">
+      Google’s Partner Sites Policy
+    </a>.
+  </p>
+  <p>
+    You can opt out of Google Analytics by installing the 
+    <a href="https://tools.google.com/dlpage/gaoptout" target="_blank" rel="noopener">
+      Google Analytics Opt-out Browser Add-on
+    </a>.
+  </p>
+
+  <h2>4. How We Use Your Information</h2>
+  <p>We may use the information collected for purposes such as:</p>
   <ul>
     <li>
-      <strong>Log Files:</strong> When you access the Website/App, our 
-      servers may automatically record certain information sent by your 
-      browser or device, such as IP address, browser type, referring/exit 
-      pages, and date/time stamps. This data helps us diagnose server 
-      issues and administer our Website/App.
+      <strong>Providing and Maintaining Our Services:</strong> 
+      To ensure our Website functions properly and to deliver content you request.
     </li>
     <li>
-      <strong>Analytics:</strong> We may use third-party analytics tools to 
-      monitor and analyze the use of our Website/App. These tools may 
-      collect information such as the pages you visit, how long you spend 
-      on them, and your general location (e.g., city/country).
+      <strong>Analytics and Improvements:</strong> 
+      To analyze trends, track user movements, and improve our Website’s layout and features.
+    </li>
+    <li>
+      <strong>Communication:</strong> 
+      To respond to your inquiries, send administrative information, or provide updates related to our services.
     </li>
   </ul>
 
-  <h3>2.3. Cookies and Similar Technologies</h3>
+  <h2>5. No Official Police or Government Affiliation</h2>
   <p>
-    We may use cookies (small data files placed on your device) or similar 
-    tracking technologies to enhance your experience. Cookies help us 
-    remember your preferences, analyze usage patterns, and customize 
-    content. You can set your browser to refuse cookies or to alert you 
-    when cookies are being sent; however, some parts of the Website/App 
-    may not function properly without cookies.
+    Police Files is an independent platform and does not represent or claim to represent any official police force, 
+    government entity, or any affiliated organization. Any reference to “police” or “law enforcement” is strictly 
+    for informational and educational purposes.
   </p>
 
-  <h2>3. Tools and Converters</h2>
-  <p>
-    We offer tools such as:
-  </p>
-  <ul>
-    <li>IPC to BNS Converter</li>
-    <li>CrPC to BNSS Converter</li>
-    <li>Age Calculator</li>
-  </ul>
-  <p>
-    These tools process the information you enter to provide the desired 
-    output (e.g., conversions, calculations). <strong>We do not store or 
-    collect</strong> the data you enter into these tools. The data is 
-    processed temporarily to generate results.
-  </p>
-
-  <h2>4. Updates Section (Twitter Posts/News)</h2>
-  <p>
-    Our Website/App includes an “Updates” section that displays posts or 
-    news from public Twitter profiles. Please note:
-  </p>
+  <h2>6. Data Sharing and Disclosure</h2>
+  <p>We do <strong>not</strong> sell or rent your personal information. We may share your data only in the following circumstances:</p>
   <ul>
     <li>
-      We do not control or maintain these Twitter feeds; they are embedded 
-      from external, publicly available sources.
+      <strong>Legal Compliance:</strong> If required by law, subpoena, or other legal process, or if we believe 
+      such action is necessary to comply with legal obligations or protect our rights.
     </li>
     <li>
-      Any interaction with embedded Twitter content (e.g., likes, retweets, 
-      follows) is governed by Twitter’s own Privacy Policy. We recommend 
-      reviewing Twitter’s policy to understand how your data is handled on 
-      their platform.
+      <strong>Service Providers:</strong> We may use trusted third-party services (e.g., web hosting, analytics) 
+      that have access to your information to perform tasks on our behalf and are obligated not to disclose or 
+      use it for other purposes.
     </li>
   </ul>
 
-  <h2>5. How We Use Your Information</h2>
+  <h2>7. Cookies and Tracking Technologies</h2>
   <p>
-    We may use the information we collect for various purposes, including 
-    to:
-  </p>
-  <ul>
-    <li>Provide, operate, and maintain the Website/App.</li>
-    <li>Respond to your inquiries, including customer support.</li>
-    <li>Improve our tools, features, and overall user experience.</li>
-    <li>Monitor and analyze usage to enhance performance and security.</li>
-    <li>Communicate with you regarding updates, security alerts, and 
-      administrative messages.</li>
-  </ul>
-
-  <h2>6. Sharing and Disclosure of Your Information</h2>
-  <p>
-    We do <strong>not</strong> sell or rent your personal information. We 
-    may share your information only in the following circumstances:
-  </p>
-  <ul>
-    <li>
-      <strong>Legal Compliance:</strong> If required to do so by law or in 
-      response to valid requests by public authorities (e.g., court orders 
-      or government regulations).
-    </li>
-    <li>
-      <strong>Service Providers:</strong> We may employ third-party 
-      companies or individuals to facilitate our services (e.g., analytics 
-      providers). They have access to your personal data only to perform 
-      tasks on our behalf and are obligated not to disclose or use it for 
-      other purposes.
-    </li>
-    <li>
-      <strong>Business Transfers:</strong> In the event of a merger, 
-      acquisition, or asset sale, your information may be transferred. We 
-      will provide notice before your personal information is transferred 
-      and becomes subject to a different Privacy Policy.
-    </li>
-  </ul>
-
-  <h2>7. Data Security</h2>
-  <p>
-    We use reasonable administrative, technical, and physical security 
-    measures to protect your personal information from unauthorized 
-    access, disclosure, or destruction. However, no method of data 
-    transmission or storage can be guaranteed to be 100% secure.
+    We use cookies and similar technologies to collect information about your browsing activities over time. 
+    This helps us provide a better user experience. You can disable cookies through your browser settings, 
+    but doing so may affect certain features of the Website.
   </p>
 
-  <h2>8. Third-Party Links and Services</h2>
+  <h2>8. Third-Party Links</h2>
   <p>
-    Our Website/App may contain links to third-party websites or services 
-    (e.g., external news sites, Twitter links). We are not responsible for 
-    the content, privacy policies, or practices of any third-party 
-    websites or services. We encourage you to review the privacy policies 
-    of these third parties before disclosing any information to them.
+    Our Website may contain links to third-party websites or resources. We do not control these external sites 
+    and are not responsible for their content or privacy practices. We encourage you to review the privacy policies 
+    of any third-party sites you visit.
   </p>
 
   <h2>9. Children’s Privacy</h2>
   <p>
-    Our Website/App is not directed to individuals under the age of 13 (or 
-    the relevant minimum age in your jurisdiction). We do not knowingly 
-    collect personal information from children. If you believe we may have 
-    collected such information, please contact us so we can take 
-    appropriate measures.
+    Our Website is not directed to individuals under the age of 13 (or the relevant minimum age in your jurisdiction), 
+    and we do not knowingly collect personal information from children. If you believe we may have collected such 
+    information, please contact us so we can remove it.
   </p>
 
-  <h2>10. Your Rights</h2>
+  <h2>10. Security Measures</h2>
   <p>
-    Depending on your jurisdiction, you may have the right to:
-  </p>
-  <ul>
-    <li>Access, update, or delete the personal information we hold about you.</li>
-    <li>Object to or restrict our processing of your personal information.</li>
-    <li>Withdraw consent where processing is based on consent.</li>
-  </ul>
-  <p>
-    To exercise any of these rights, please contact us using the details 
-    in the “Contact Us” section below.
+    We employ reasonable security measures to protect your information from unauthorized access or disclosure. 
+    However, no method of transmission over the internet or electronic storage is 100% secure. We cannot guarantee 
+    absolute security of your data.
   </p>
 
   <h2>11. Changes to This Privacy Policy</h2>
   <p>
-    We may update this Privacy Policy from time to time to reflect changes 
-    in our practices or for other operational, legal, or regulatory 
-    reasons. When we do, we will revise the “Effective Date” at the top. 
-    Your continued use of the Website/App after any changes indicates your 
-    acceptance of the updated policy.
+    We may update this Privacy Policy from time to time to reflect changes in our practices or for other 
+    operational, legal, or regulatory reasons. When we do, we will revise the “Effective Date” at the top. 
+    Your continued use of the Website after any modifications indicates your acceptance of the updated policy.
   </p>
 
   <h2>12. Contact Us</h2>
   <p>
-    If you have any questions or concerns about this Privacy Policy or our 
-    data practices, please contact us at:
+    If you have questions or concerns about this Privacy Policy, please contact us at:
   </p>
   <ul>
-    <li>
-      <strong>Email</strong>: 
-      <a href="mailto:shishu.tricksbricks@gmail.com">shishu.tricksbricks@gmail.com</a>
-    </li>
-    <li>
-      <strong>WhatsApp</strong>: 
-      <a href="https://wa.me/919504875076" target="_blank">+91 9504875076</a>
-    </li>
+    <li><strong>Email:</strong> <a href="mailto:shishu.tricksbricks@gmail.com">shishu.tricksbricks@gmail.com</a></li>
+    <li><strong>Telegram:</strong> <a href="https://t.me/PoliceCK" target="_blank" rel="noopener">@PoliceCK</a></li>
   </ul>
+
+  <p>
+    Thank you for reading our Privacy Policy. By using our Website, you acknowledge that you have read and 
+    understood this policy.
+  </p>
 </body>
 </html>
