--- a/thankyou.html
+++ b/thankyou.html
@@ -6,18 +6,15 @@
   <title>Thank You - Police Files</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
-    * {
-      box-sizing: border-box;
-    }
     body {
       font-family: 'Roboto', sans-serif;
-      background-color: #f4f4f4;
+      background: #f4f4f4;
       margin: 0;
       padding: 0;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      min-height: 100vh;
       color: #333;
     }
     .container {
@@ -26,30 +23,38 @@
       border-radius: 8px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
       text-align: center;
+      max-width: 600px;
+      margin: 20px;
     }
     h1 {
-      margin-bottom: 20px;
       color: #007bff;
+      margin-bottom: 20px;
     }
     p {
       font-size: 18px;
+      line-height: 1.6;
       margin-bottom: 30px;
     }
-    a {
-      color: #007bff;
+    .back-button {
+      display: inline-block;
+      padding: 10px 20px;
+      background-color: #007bff;
+      color: #ffffff;
       text-decoration: none;
-      font-weight: 500;
+      border-radius: 4px;
+      font-weight: 600;
+      transition: background 0.3s ease;
     }
-    a:hover {
-      text-decoration: underline;
+    .back-button:hover {
+      background-color: #0056b3;
     }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>Thank You!</h1>
-    <p>Your message has been successfully sent. We'll get back to you soon!</p>
-    <p><a href="index.html">Return to Home</a></p>
+    <p>Your message has been successfully sent. We appreciate you contacting us and will get back to you soon.</p>
+    <a href="index.html" class="back-button">Back to Home</a>
   </div>
 </body>
 </html>
