--- a/index.html
+++ b/index.html
@@ -148,16 +148,16 @@
                       <div class="form-group">
                         <label for="dobInput">Date of Birth</label>
                         <div class="date-input-wrapper">
-                          <input type="text" class="form-control" id="dobInput" placeholder="Select date" readonly>
+                          <input type="text" class="form-control" id="dobInput" placeholder="DDMMYY" readonly>
                           <i class="fas fa-calendar-alt date-icon"></i>
                         </div>
                       </div>
                     </div>
                     <div class="col-6">
                       <div class="form-group">
-                        <label for="refDateInput">As of</label>
+                        <label for="refDateInput">Date On</label>
                         <div class="date-input-wrapper">
-                          <input type="text" class="form-control" id="refDateInput" placeholder="Select date" readonly>
+                          <input type="text" class="form-control" id="refDateInput" placeholder="DDMMYY" readonly>
                           <i class="fas fa-calendar-alt date-icon"></i>
                         </div>
                       </div>
@@ -174,7 +174,7 @@
     </div>
     <div class="running-sentence">
         <marquee behavior="scroll" direction="left" scrollamount="4">
-          आपके सहयोग की आवश्यकता है, कोई प्रारुप अपडेट कराने के लिए नीचे दिये गये बटन से सम्पर्क करें ताकि सभी जरुरी प्रारुप अपडेट किया जा सके । 
+          प्रारुप अपलोड की प्रक्रिया जारी है, कोई प्रारुप अपडेट कराने के लिए बटन के माध्यम से टेलीग्राम पर सम्पर्क करें ताकि सभी जरुरी प्रारुप अपडेट किया जा सके । 
         </marquee>
       </div>
     <!-- Updates Section (formerly Offers) -->
