--- a/index.html
+++ b/index.html
@@ -169,6 +169,16 @@
               </div>
             </div>
           </div>
+          <!-- High Court Case Status Button Card -->
+<div class="card">
+  <div class="card-header" id="headingHighCourt">
+    <h4 class="mb-0">
+      <a class="btn high-court-btn" href="https://www.allahabadhighcourt.in/apps/status_ccms/" target="_blank">
+        High Court Case Status
+      </a>
+    </h4>
+  </div>
+</div>
         </div><!-- End of accordion -->
       </div>
     </div>
