--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                   <button class="btn material-btn" onclick="convertIPCtoBNS()">Convert</button>
                   <div class="result mt-2"><strong>Result:</strong> <span id="ipcResult"></span></div>
                   <p class="small mt-1">
-                    (Data fetched from Web: 
+                    (For reference only: 
                     <a href="https://bprd.nic.in/uploads/pdf/COMPARISON%20SUMMARY%20BNS%20to%20IPC%20.pdf" target="_blank">
                       Detailed PDF Here
                     </a>)
@@ -122,7 +122,7 @@
                   <button class="btn material-btn" onclick="convertCrPcToBNSS()">Convert</button>
                   <div class="result mt-2"><strong>Result:</strong> <span id="crpcResult"></span></div>
                   <p class="small mt-1">
-                    (Data fetched from Web: 
+                    (For reference only: 
                     <a href="https://bprd.nic.in/uploads/pdf/Comparison%20summary%20BNSS%20to%20CrPC.pdf" target="_blank">
                       Detailed PDF Here
                     </a>)
