--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     </div>
                     <div class="col-6">
                       <div class="form-group">
-                        <label for="refDateInput">Date On</label>
+                        <label for="refDateInput">Age On</label>
                         <div class="date-input-wrapper">
                           <input type="text" class="form-control" id="refDateInput" placeholder="DDMMYY" readonly>
                           <i class="fas fa-calendar-alt date-icon"></i>
